--- a/Tag 1 Aufgaben/M106_Lösungen_DDL.ipynb
+++ b/Tag 1 Aufgaben/M106_Lösungen_DDL.ipynb
@@ -272,7 +272,10 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "1144ef34-0ea9-413f-9d0b-117ee9dbd2c2",
-                "language": "sql"
+                "language": "sql",
+                "tags": [
+                    "hide_input"
+                ]
             },
             "outputs": [],
             "execution_count": null
